cmake_minimum_required(VERSION 3.13)  # CMake version check
project(MovieInventory)               # Create project "simple_example"
set(CMAKE_CXX_STANDARD 14)            # Enable c++14 standard

# Add main.cpp file of project root directory as source file
set(main.cpp)

# Add executable target with source files listed in SOURCE_FILES variable
add_executable(main.cpp movie.h drama.h comedy.h classic.h store.h store.cpp transaction.h data4commands.txt data4customers.txt data4movies.txt)